# substrate-barcode-scanner-pallet

./: .gitignore  Cargo.toml  README.md
pallet/: Cargo.toml  README.md
runtime-api/: Cargo.toml  README.md
runtime-api/src/: lib.rs
src/: lib.rs  mock.rs  tests.rs
