[package]
authors = ['Ayush Mishra <ayushmishra2005@gmail.com>']
description = 'Substrate based 2D barcode scanner pallett'
edition = '2018'
license = 'Unlicense'
name = 'substrate-barcode-scanner-pallet'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
]
