[package]
name = "substrate-barcode-scanner-pallet-runtime-api"
version = "0.1.0"
authors = ['Ayush Mishra <ayushmishra2005@gmail.com>']
edition = "2018"
license = "Unlicense"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-api = { version = '2.0.0', default-features = false}

[features]
default = ["std"]
std = [
    'codec/std',
    "sp-api/std",
    ]