[package]
authors = ['Ayush Mishra <ayushmishra2005@gmail.com>']
description = 'Runtime API for Substrate based 2D barcode scanner pallet'
edition = '2018'
license = "Apache-2.0"
name = "substrate-barcode-scanner-pallet-runtime-api"
version = '0.7.0'
readme = "README.md"
repository = "https://github.com/knoldus/substrate-barcode-scanner-pallet"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-api = { version = '4.0.0-dev', default-features = false}

[features]
default = ["std"]
std = [
    'codec/std',
    "sp-api/std",
    ]
